samples/_failures_safe/1761330329_bef2c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a12bb8f.c: In function ‘main’:
./samples/SAFE/__tmp_7a12bb8f.c:139:19: error: expected ‘;’ at end of input
  139 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_7a12bb8f.c:139:13: error: expected declaration or statement at end of input
  139 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_7a12bb8f.c:139:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7a12bb8f.c:139:13: error: expected declaration or statement at end of input
